name:                try-haskell-turtle
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/try-haskell-turtle#readme
license:             BSD3
license-file:        LICENSE
author:              CJ Engineering
maintainer:          aztec.rex@jammm.com
copyright:           2017 CJ Affiliate
category:            Shell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable try-haskell-turtle-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , try-haskell-turtle
  default-language:    Haskell2010

test-suite try-haskell-turtle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , try-haskell-turtle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aztecrex/try-haskell-turtle

